--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,54 +23,48 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
-              <div class="col-md-6 product-frame" >
-                  <a href="http://www.google.com" title="temp title">
-                    <img src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/bandage.png" alt="First slide">
-                  </a>
+              <div class="col-md-6 " >
+                <a href="http://www.google.com" title="temp title">
+                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/bandage.png" alt="First slide">
+                </a>
               </div>
-              <div class="col-md-6 product-frame">
-                  <a href="http://www.google.com" title="temp title">
-                    <img src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/coldandflusyrup.png" alt="First slide">
-                  </a>
+              <div class="col-md-6 ">
+                <a href="http://www.google.com" title="temp title">
+                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/coldandflusyrup.png" alt="First slide">
+                </a>
               </div>
-              <div class="col-md-6 product-frame">
-                  <a href="http://www.google.com" title="temp title">
-                    <img src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/painrelief.png" alt="First slide">
-                  </a>
+              <div class="col-md-6 ">
+                <a href="http://www.google.com" title="temp title">
+                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/painrelief.png" alt="First slide">
+                </a>
               </div>
-              <div class="col-md-6 product-frame">
-                  <a href="http://www.google.com" title="temp title">
-                    <img src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/firstaidkit.png" alt="First slide">
-                  </a>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-md-6 product-frame">
-                <div class="thumbnail">
-                  <a href="http://www.google.com">
-                    <img src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/bandage.png" alt="First slide">
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-6 product-frame">
-                <div class="thumbnail">
-                  <a href="http://www.google.com">
-                    <img src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/coldandflusyrup.png" alt="First slide">
-                  </a>
-                </div>
+              <div class="col-md-6 ">
+                <a href="http://www.google.com" title="temp title">
+                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/firstaidkit.png" alt="First slide">
+                </a>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="row">
-              <div class="col-md-12 product-frame">
-                <div class="thumbnail">
+              <div class="col-md-6 ">
+                <a href="http://www.google.com">
+                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/bandage.png" alt="First slide">
+                </a>
+              </div>
+              <div class="col-md-6 ">
+                <a href="http://www.google.com">
+                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/coldandflusyrup.png" alt="First slide">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-md-6 ">
                   <a href="http://www.google.com">
-                    <img src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/bandage.png" alt="First slide">
+                    <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/bandage.png" alt="First slide">
                   </a>
-                </div>
               </div>
             </div>
           </div>
