feat: enable toggle slide show

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,8 +12,8 @@
   </div>
   <div class="row">
     <div class="col text-md-right">
-      <input type="checkbox" id="scales" name="scales" checked>
-      <label for="scales">Toggle Slide Show</label>
+      <input type="checkbox" id="toggleSlideShow" name="toggleSlideShow" checked>
+      <label for="toggleSlideShow">Toggle Slide Show</label>
     </div>
   </div>
   <div class="row">
