fix: fix carousel

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,14 +12,14 @@
   </div>
   <div class="row">
     <div class="col text-md-right">
-      <input type="checkbox" id="toggleSlideShow" name="toggleSlideShow" checked>
+      <input type="checkbox" id="toggleSlideShow" name="toggleSlideShow" unchecked>
       <label for="toggleSlideShow">Toggle Slide Show</label>
     </div>
   </div>
   <div class="row">
     <div class="col">
       <!--todo: populate carousel items using products service -->
-      <div id="productCarousel" class="carousel slide border" data-ride="carousel" data-interval="3000">
+      <div id="productCarousel" class="carousel slide border">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
