--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,53 +18,15 @@
   </div>
   <div class="row">
     <div class="col">
-      <!--todo: populate carousel items using products service -->
+
       <div id="productCarousel" class="carousel slide border">
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div *ngFor="let item of products; let i = index" [ngClass]="{'carousel-item': true, 'active': i === 0}">
             <div class="row">
-              <div class="col-md-6 " >
-                <a href="http://www.google.com" title="temp title">
-                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/bandage.png" alt="First slide">
+              <div *ngFor="let product of item.random4; let i = index" class="col-md-6">
+                <a [href]="'product?name=' + product.name" [title]="product.name + ': ' + product.description">
+                  <img class="img-fluid" [src]="product.imagelink" [alt]="product.name">
                 </a>
-              </div>
-              <div class="col-md-6 ">
-                <a href="http://www.google.com" title="temp title">
-                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/coldandflusyrup.png" alt="First slide">
-                </a>
-              </div>
-              <div class="col-md-6 ">
-                <a href="http://www.google.com" title="temp title">
-                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/painrelief.png" alt="First slide">
-                </a>
-              </div>
-              <div class="col-md-6 ">
-                <a href="http://www.google.com" title="temp title">
-                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/firstaidkit.png" alt="First slide">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-md-6 ">
-                <a href="http://www.google.com">
-                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/bandage.png" alt="First slide">
-                </a>
-              </div>
-              <div class="col-md-6 ">
-                <a href="http://www.google.com">
-                  <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/coldandflusyrup.png" alt="First slide">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-md-6 ">
-                  <a href="http://www.google.com">
-                    <img class="img-fluid" src="https://webmppcapstone.blob.core.windows.net/drugs-royaltyfree/bandage.png" alt="First slide">
-                  </a>
               </div>
             </div>
           </div>
@@ -78,6 +40,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+
     </div>
   </div>
 </div>
