--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
         <h6>The easiest way to shop for your grocery needs</h6>
       </div>
       <div class="my-auto">
-        <button type="button" class="btn btn-primary">Shop all &gt;</button>
+        <button type="button" class="btn btn-primary btn-lg">Shop all &gt;</button>
       </div>
     </div>
   </div>
