--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,7 +23,7 @@
         <div *ngFor="let item of products; let i = index" [ngClass]="{'carousel-item': true, 'active': i === 0}">
           <div class="row">
             <div *ngFor="let product of item.random4; let i = index" class="col-md-6">
-              <a [href]="'product?name=' + product.name" [title]="product.name + ': ' + product.description">
+              <a [routerLink]="['product']" [queryParams]="{name: product.name}"  [title]="product.name + ': ' + product.description">
                 <img class="img-fluid" [src]="product.imagelink" [alt]="product.name">
               </a>
             </div>
