--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,12 +1,11 @@
 <footer id="appFooter">
   <div class="container">
     <div class="row">
-      <div class="col-sm-6 col-sm-9">
-        <h2><a href="#"> LOGO </a></h2>
-      </div>
-      <div class="col-sm-6 col-md-3">
+      <div class="hidden-xs col-sm-3 col-md-4"></div>
+      <div class="col-sm-6 col-md-4">
         <button type="button" class="btn btn-default">Contact us</button>
       </div>
+      <div class="hidden-xs col-sm-3 col-md-4"></div>
     </div>
   </div>
   <div class="footer-copyright">
