--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Shop all</a>
+          <a class="nav-link" [routerLink]="['\shopping']">Shop all</a>
         </li>
         <li class="nav-item">
           <a href="#">
