--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
       <h6>The easiest way to shop for your grocery needs</h6>
     </div>
     <div class="col-sm-6 col-md-3 col-lg-2">
-      <button type="button" class="btn btn-primary btn-lg">Shop all &gt;</button>
+      <button type="button" class="btn btn-primary btn-lg" (click)="onShoppingAll()" >Shop all &gt;</button>
     </div>
   </div>
   <div class="row">
@@ -38,7 +38,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      
+
     </div>
   </div>
 </div>
