--- a/src/app/components/shopping/shopping.component.css
+++ b/src/app/components/shopping/shopping.component.css
@@ -19,11 +19,16 @@
   position: absolute;
   bottom: 0px;
   width: 100%;
-  text-align: right;
+  min-height: 30px;
 }
 
 .product-footer .btn {
-  padding: 5px;
-  margin: 10px;
+  padding: 2px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  width: 100%
 }
 
+.dock-bottom {
+  padding-bottom: 32px;
+}
