--- a/src/app/components/shopping/shopping.component.html
+++ b/src/app/components/shopping/shopping.component.html
@@ -51,7 +51,7 @@
 
       <div class="row">
         <div
-          class="col-12 col-sm-6 col-md-4 col-lg-3 border"
+          class="col-12 col-sm-6 col-md-4 col-lg-3 border dock-bottom"
           *ngFor="let item of subcategory.items; let i = index"
           [ngClass]="{ 'd-none': inStockOnly ? item.stock <= 0 : false }">
           <div class="thumbnail">
@@ -63,16 +63,22 @@
             <div class="row">
               <div class="col">
                 <a [routerLink]="['/product']" [queryParams]="{ name: item.name }">
-                  <img [src]="item.imagelink" [alt]="item.name" style="width:100%" [title]="item.description">
+                  <img [src]="item.imagelink" [alt]="item.name" style="width:100%" [title]="item.description" [alt]="item.name">
                 </a>
               </div>
             </div>
-            <div class="row product-footer">
-              <div class="col">
-                <button class="btn btn-outline-dark" title="Add one item to cart" (click)="onAddToCart(item)">Add</button>
-              </div>
+
+          </div>
+
+          <div class="row product-footer bg-light align-middle">
+            <div class="col-3">
+              <button class="btn btn-outline-secondary" title="Add one item to cart" (click)="onAddToCart(item)">Add</button>
+            </div>
+            <div class="col-9 text-right">
+              Rating: {{item.rating}}/5
             </div>
           </div>
+
         </div>
       </div>
 
