feat: cart component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
           <a class="nav-link" [routerLink]="['\shopping']">Shop all</a>
         </li>
         <li class="nav-item">
-          <a href="#">
+          <a class="nav-link" [routerLink]="['\cart']">
             <img src="assets/img/outline_shopping_cart_white_18dp.png">
           </a>
         </li>
