--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,13 +1,23 @@
 <footer id="appFooter">
-  <div class="container">
+  <nav class="navbar navbar-light bg-default">
     <div class="row">
-      <div class="hidden-xs col-sm-3 col-md-4"></div>
-      <div class="col-sm-6 col-md-4">
-        <button type="button" class="btn btn-default">Contact us</button>
+      <div class="col-12 text-center">
+
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['']">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['\about']">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['\contact']">Contact</a>
+          </li>
+        </ul>
+
       </div>
-      <div class="hidden-xs col-sm-3 col-md-4"></div>
     </div>
-  </div>
+  </nav>
   <div class="footer-copyright">
     <p>© 2019 Grocery Live </p>
   </div>
