--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -29,38 +29,68 @@
           Total: {{ item.price * item.qty }}$
         </div>
         <div class="col-12 col-sm-1 col-md-1">
-          <button type="button" class="btn btn-danger" (click)="onDeleteItem($event, i)">X</button>
+          <button type="button" class="btn btn-danger btn-sm" (click)="onDeleteItem($event, i)">X</button>
         </div>
 
       </div>
       <div class="row">
         <div class="col-12 text-right">
-          Subtotal: {{ subtotal }}$
+          <p>Subtotal: {{ subtotal }}$</p>
+          <p>Shipping: {{ shipping }}$</p>
+          <p>Tax: {{ tax }}$</p>
+          <p>Total: {{ total }}$</p>
         </div>
       </div>
     </div>
 
     <!--Cart checkout details-->
     <div class="col-12 col-sm-12 col-md-4 p-4 border" [ngClass]="{ 'd-none': items.length <= 0 }">
-      <form>
+
+      <h3>Enter Shipping Details</h3>
+      <form #checkoutForm="ngForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <label for="subtotalTextBox">Subtotal:</label>
-          <input type="text" disabled id="subtotalTextBox" [(ngModel)]="subtotal" [ngModelOptions]="{ standalone: true }" class="form-control text-center">
+          <input
+            type="text" id="nameTextBox" class="form-control" required placeholder="Name"
+            [(ngModel)]="name" name="name" #nameCtrl="ngModel">
+          <div [hidden]="nameCtrl.valid || nameCtrl.pristine"
+               class="alert alert-danger">
+            Name is required
+          </div>
         </div>
+
         <div class="form-group">
-          <label for="shippingTextBox">Shipping</label>
-          <input type="text" disabled id="shippingTextBox" [(ngModel)]="shipping" [ngModelOptions]="{ standalone: true }" class=" form-control text-center">
+          <input
+            type="text" id="addressTextBox" class="form-control" required placeholder="Address"
+            [(ngModel)]="address" name="address" #addressCtrl="ngModel">
+          <div [hidden]="addressCtrl.valid || addressCtrl.pristine"
+               class="alert alert-danger">
+            Address is required
+          </div>
         </div>
+
         <div class="form-group">
-          <label for="taxTextBox">Tax</label>
-          <input type="text" disabled id="taxTextBox" [(ngModel)]="tax" [ngModelOptions]="{ standalone: true }" class=" form-control text-center">
+          <input
+            type="text" id="cityTextBox" class="form-control" required placeholder="City"
+            [(ngModel)]="city" name="city" #cityCtrl="ngModel">
+          <div [hidden]="cityCtrl.valid || cityCtrl.pristine"
+               class="alert alert-danger">
+            City is required
+          </div>
         </div>
+
         <div class="form-group">
-          <label for="totalTextBox">Total</label>
-          <input type="text" disabled id="totalTextBox" [(ngModel)]="total" [ngModelOptions]="{ standalone: true }" class=" form-control text-center">
+          <input
+            type="text" id="phoneTextBox" class="form-control" required placeholder="Phone number"
+            [(ngModel)]="phone" name="phone" #phoneCtrl="ngModel">
+          <div [hidden]="phoneCtrl.valid || phoneCtrl.pristine"
+               class="alert alert-danger">
+            Phone number is required
+          </div>
         </div>
-        <button type="submit" class="btn btn-primary" (click)="onCheckout()">Checkout</button>
+
+        <button type="submit" class="btn btn-success" [disabled]="!checkoutForm.form.valid">Send</button>
       </form>
+
     </div>
   </div>
 </div>
