--- a/src/app/components/shopping/shopping.component.html
+++ b/src/app/components/shopping/shopping.component.html
@@ -3,16 +3,18 @@
   <div class="row navbar navbar-light bg-light border">
 
     <div class="col-sm-6 col-md-6">
-      <h2>
-        {{ subcategoryName && subcategoryName.length > 0 ? subcategoryName : defaultSubcategory }}
-      </h2>
+      <h4>
+        {{ subcategoryName && subcategoryName.length > 0 ?
+        'Showing ' + visibleProductsCount + ' of ' + subcategory.items.length + ' items in ' +  subcategoryName :
+        defaultSubcategory }}
+      </h4>
     </div>
 
     <div class="col-sm-3 col-md-3">
       <label for="onlyInStockCheckBox">In stock only: </label>
       <input type="checkbox" id="onlyInStockCheckBox"
              [checked]="inStockOnly"
-             (change)="inStockOnly = !inStockOnly">
+             (change)="onShowInStock()">
     </div>
     <div class="col-sm-3 col-md-3">
       <label for="productSortingSelect">Sort by: </label>
