fix: use css class instead of inline style

--- a/src/app/components/shopping/shopping.component.html
+++ b/src/app/components/shopping/shopping.component.html
@@ -65,7 +65,7 @@
             <div class="row">
               <div class="col">
                 <a [routerLink]="['/product']" [queryParams]="{ name: item.name }">
-                  <img [src]="item.imagelink" [alt]="item.name" style="width:100%" [title]="item.description" [alt]="item.name">
+                  <img [src]="item.imagelink" [alt]="item.name" class="img-fluid" [title]="item.description" [alt]="item.name">
                 </a>
               </div>
             </div>
