--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,4 @@
+<!--rubric72-->
 <footer id="appFooter">
   <nav class="navbar navbar-light bg-default">
     <div class="row">
@@ -5,12 +6,18 @@
 
         <ul class="navbar-nav">
           <li class="nav-item">
+            <!--rubric73-->
+            <!--rubric76-->
             <a class="nav-link" [routerLink]="['']">Home</a>
           </li>
           <li class="nav-item">
+            <!--rubric74-->
+            <!--rubric77-->
             <a class="nav-link" [routerLink]="['\about']">About</a>
           </li>
           <li class="nav-item">
+            <!--rubric75-->
+            <!--rubric78-->
             <a class="nav-link" [routerLink]="['\contact']">Contact</a>
           </li>
         </ul>
