--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,8 @@
+<!--rubric68-->
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <!--rubric65-->
+    <!--rubric69-->
     <a class="navbar-brand" [routerLink]="['']">Grocery live</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,9 +11,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <!--rubric66-->
+          <!--rubric70-->
           <a class="nav-link" [routerLink]="['\shopping']">Shop all</a>
         </li>
         <li class="nav-item">
+          <!--rubric67-->
+          <!--rubric71-->
           <a class="nav-link" [routerLink]="['\cart']">
             <img src="assets/img/outline_shopping_cart_white_18dp.png">
           </a>
