--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,12 +2,16 @@
   <div class="row">
     <div class="col-sm-6 col-md-9 col-lg-10">
       <!--rubric04-->
+      <!--The user should see some text welcoming them to the website-->
       <h1>Welcome to Grocery Live!</h1>
       <h6>The easiest way to shop for your grocery needs</h6>
     </div>
     <div class="col-sm-6 col-md-3 col-lg-2">
       <!--rubric05-->
+      <!--The user should see a button labeled “Shop All”-->
       <!--rubric12-->
+      <!--If the user clicks on the “Shop All” button, the user should be-->
+      <!--taken to the shopping page-->
       <button type="button" class="btn btn-primary btn-lg" (click)="onShoppingAll()" >Shop all &gt;</button>
     </div>
   </div>
@@ -15,13 +19,19 @@
     <div class="col text-md-right">
       <input type="checkbox" id="toggleSlideShow" name="toggleSlideShow" unchecked>
       <!--rubric06-->
+      <!--The user should see a toggle switch labeled “Toggle Slide Show”-->
       <label for="toggleSlideShow">Toggle Slide Show</label>
     </div>
   </div>
   <div class="row">
     <div class="col">
       <!--rubric01-->
+      <!--The user should see a product carousel that contains at least 3-->
+      <!--slides of products, with each slide having between 1 and 4-->
+      <!--product images.-->
       <!--rubric11-->
+      <!--Whenever the product carousel changes it slide, it should do in-->
+      <!--an animated way-->
       <div id="productCarousel" class="carousel slide border">
         <div class="carousel-inner">
           <div *ngFor="let item of products; let i = index" [ngClass]="{'carousel-item': true, 'active': i === 0}">
@@ -29,6 +39,9 @@
               <div *ngFor="let product of item.random4; let i = index" class="col-6 col-sm-6 col-md-6">
                 <a [routerLink]="['product']" [queryParams]="{name: product.name}"  [title]="product.name + ': ' + product.description">
                   <!--rubric09-->
+                  <!--If the user clicks on a product image, they should be taken to a-->
+                  <!--product page that is populated with the details of the clicked-->
+                  <!--product-->
                   <img class="img-fluid" [src]="product.imagelink" [alt]="product.name">
                 </a>
               </div>
@@ -36,13 +49,21 @@
           </div>
         </div>
         <!--rubric02-->
+        <!--The user should see a button that resembles a left arrow key to-->
+        <!--the left of the product carousel-->
         <!--rubric08-->
+        <!--Clicking on the left arrow should move the product carousel one-->
+        <!--slide back-->
         <a class="carousel-control-prev" href="#productCarousel" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
         <!--rubric03-->
+        <!--The user should see a button that resembles a right arrow key to-->
+        <!--the right of the product carousel-->
         <!--rubric07-->
+        <!--Clicking on the right arrow should move the product carousel one-->
+        <!--slide forward.-->
         <a class="carousel-control-next" href="#productCarousel" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
