--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <!--rubric72-->
+<!--The footer bar should always be at the bottom of the page-->
 <footer id="appFooter">
   <nav class="navbar navbar-light bg-default">
     <div class="row">
@@ -7,17 +8,26 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <!--rubric73-->
+            <!--User shall see a link to the home page-->
             <!--rubric76-->
+            <!--Clicking on the home page link should take the user to the home-->
+            <!--page-->
             <a class="nav-link" [routerLink]="['']">Home</a>
           </li>
           <li class="nav-item">
             <!--rubric74-->
+            <!--User shall see a link to the about page-->
             <!--rubric77-->
+            <!--Clicking on the about page link should take the user to the about-->
+            <!--page-->
             <a class="nav-link" [routerLink]="['\about']">About</a>
           </li>
           <li class="nav-item">
             <!--rubric75-->
+            <!--User shall see a link to the contact page-->
             <!--rubric78-->
+            <!--Clicking on the contact page link should take the user to the-->
+            <!--contact page-->
             <a class="nav-link" [routerLink]="['\contact']">Contact</a>
           </li>
         </ul>
