--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -2,6 +2,7 @@
   <div class="row p-4">
     <div class="col">
       <!--rubric43-->
+      <!--The user should see a button labeled “Back”-->
       <!--rubric45-->
       <button type="button" class="btn btn-default btn-lg" (click)="onGoBackClicked()">&#10094; Back</button>
     </div>
@@ -9,33 +10,41 @@
   <div class="row p-4">
     <div class="col-12 col-sm-12 col-md-5 text-center">
       <!--rubric36-->
+      <!--The user should an image of the selected product-->
       <img class="img-fluid" [src]="product.imagelink" [alt]="product.name">
     </div>
     <div class="d-none d-md-block col-md-1"></div>
     <div class="col-12 col-sm-12 col-md-6 text-center h-100 align-middle">
       <!--rubric35-->
+      <!--The user should the name of the selected product-->
       <h2>
         {{ product.name }}
       </h2>
       <!--rubric37-->
+      <!--The user should see the rating of the selected product-->
       <p>
         Rating: {{ product.rating }}/5
       </p>
       <!--rubric39-->
+      <!--The user should see the price of the selected product-->
       <p>
         Price: {{ product.price }}
       </p>
       <!--rubric38-->
+      <!--The user should see the number of items in stock of the selected-->
+      <!--product-->
       <p>
         Items in stock: {{ product.stock }}
       </p>
       <!--rubric40-->
+      <!--The user should see a description of the selected product-->
       <p>
         Description: {{ product.description }}
       </p>
       <div>
         <label for="value">Qty: </label>
         <!--rubric42-->
+        <!--The user should see an input field labeled “Qty”-->
         <input type="text" id="value" autocomplete="off" class="text-center" [(ngModel)]="qty" required/>
         <p class="alert alert-danger" *ngIf="!validQty">
           Please enter a valid qty and make sure it's available in stock
@@ -43,7 +52,11 @@
       </div>
       <div>
         <!--rubric41-->
+        <!--The user should see a button labeled “Add”-->
         <!--rubric44-->
+        <!--Clicking the “Add” button should add the number of units-->
+        <!--specified in the “Qty” input field of the selected product to the-->
+        <!--shopping cart-->
         <button type="submit" class="btn btn-primary" (click)="onAddToCart()">Add</button>
       </div>
     </div>
